(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1873,3 +1873,13 @@ tags:
 * [2021-04-09 使用 NTFS 流（第 2 部分）](/2021/04/09/working-with-ntfs-streams-part-2)
 * [2021-04-13 使用 NTFS 流（第 3 部分）](/2021/04/13/working-with-ntfs-streams-part-3)
 * [2021-04-15 使用 NTFS 流（第 4 部分）](/2021/04/15/working-with-ntfs-streams-part-4)
+* [2021-04-19 使用 NTFS 流（第 5 部分）](/2021/04/19/working-with-ntfs-streams-part-5)
+* [2021-04-21 查找系统路径](/2021/04/21/finding-system-paths)
+* [2021-04-23 识别组成员身份](/2021/04/23/identifying-group-memberships)
+* [2021-04-27 快速初始化多个PowerShell控制台](/2021/04/27/quickly-initializing-multiple-powershell-consoles)
+* [2021-04-29 Linux 如何保护安全字符串（实际未保护）](/2021/04/29/how-linux-protects-securestrings-not)
+
+2021 年 05 月
+-------------
+* [2021-05-03 检测 Wi-Fi 信号强度（第 1 部分）](/2021/05/03/identifying-wi-fi-signal-strength-part-1)
+* [2021-05-05 检测 Wi-Fi 信号强度（第 2 部分）](/2021/05/05/identifying-wi-fi-signal-strength-part-2)
