(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1895,3 +1895,6 @@ tags:
 2021 年 06 月
 -------------
 * [2021-06-02 评估事件日志数据（第 1 部分）](/2021/06/02/evaluating-event-log-data-part-1)
+* [2021-06-04 评估事件日志数据（第 2 部分）](/2021/06/04/evaluating-event-log-data-part-2)
+* [2021-06-08 评估事件日志数据（第 3 部分）](/2021/06/08/evaluating-event-log-data-part-3)
+* [2021-06-10 原版 Windows 10 产品密钥](/2021/06/10/original-windows-10-product-key)
