(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1883,6 +1883,7 @@ tags:
 -------------
 * [2021-05-03 检测 Wi-Fi 信号强度（第 1 部分）](/2021/05/03/identifying-wi-fi-signal-strength-part-1)
 * [2021-05-05 检测 Wi-Fi 信号强度（第 2 部分）](/2021/05/05/identifying-wi-fi-signal-strength-part-2)
+* [2021-05-07 检测 Wi-Fi 信号强度（第 3 部分）](/2021/05/07/identifying-wi-fi-signal-strength-part-3)
 * [2021-05-11 更好的 PowerShell 帮助（第 1 部分）](/2021/05/11/better-powershell-help-part-1)
 * [2021-05-13 更好的 PowerShell 帮助（第 2 部分）](/2021/05/13/better-powershell-help-part-2)
 * [2021-05-17 更好的 PowerShell 帮助（第 3 部分）](/2021/05/17/better-powershell-help-part-3)
