(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1897,3 +1897,5 @@ tags:
 * [2021-06-04 评估事件日志数据（第 2 部分）](/2021/06/04/evaluating-event-log-data-part-2)
 * [2021-06-08 评估事件日志数据（第 3 部分）](/2021/06/08/evaluating-event-log-data-part-3)
 * [2021-06-10 原版 Windows 10 产品密钥](/2021/06/10/original-windows-10-product-key)
+* [2021-06-14 检测 Windows 版本（第 1 部分）](/2021/06/14/identifying-windows-version-part-1)
+* [2021-06-16 检测 Windows 版本（第 2 部分）](/2021/06/16/identifying-windows-version-part-2)
