(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1899,3 +1899,7 @@ tags:
 * [2021-06-10 原版 Windows 10 产品密钥](/2021/06/10/original-windows-10-product-key)
 * [2021-06-14 检测 Windows 版本（第 1 部分）](/2021/06/14/identifying-windows-version-part-1)
 * [2021-06-16 检测 Windows 版本（第 2 部分）](/2021/06/16/identifying-windows-version-part-2)
+* [2021-06-18 检测 Windows 版本（第 3 部分）](/2021/06/18/identifying-windows-version-part-3)
+* [2021-06-22 对文本做哈希](/2021/06/22/hashing-text)
+* [2021-06-24 排序技巧（第 1 部分）](/2021/06/24/sorting-tricks-part-1)
+* [2021-06-28 排序技巧（第 2 部分）](/2021/06/28/sorting-tricks-part-2)
