(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1903,3 +1903,18 @@ tags:
 * [2021-06-22 对文本做哈希](/2021/06/22/hashing-text)
 * [2021-06-24 排序技巧（第 1 部分）](/2021/06/24/sorting-tricks-part-1)
 * [2021-06-28 排序技巧（第 2 部分）](/2021/06/28/sorting-tricks-part-2)
+
+2021 年 07 月
+-------------
+* [2021-07-16 启用 ActiveDirectory 模块](/2021/07/16/enabling-activedirectory-module)
+* [2021-07-20 在 Windows 10 中解锁额外的 PowerShell 模块](/2021/07/20/unlock-additional-powershell-modules-in-windows-10)
+* [2021-07-22 管理快捷方式文件（第 1 部分）](/2021/07/22/managing-shortcut-files-part-1)
+* [2021-07-26 管理快捷方式文件（第 2 部分）](/2021/07/26/managing-shortcut-files-part-2)
+* [2021-07-28 管理快捷方式文件（第 3 部分）](/2021/07/28/managing-shortcut-files-part-3)
+* [2021-07-30 在 Windows 10 上启用 Telnet](/2021/07/30/enable-telnet-on-windows-10)
+
+2021 年 08 月
+-------------
+* [2021-08-03 读取打印机属性（第 1 部分）](/2021/08/03/reading-printer-properties-part-1)
+* [2021-08-05 读取打印机属性（第 2 部分）](/2021/08/05/reading-printer-properties-part-2)
+* [2021-08-09 读取打印机属性（第 3 部分）](/2021/08/09/reading-printer-properties-part-3)
