(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1918,3 +1918,6 @@ tags:
 * [2021-08-03 读取打印机属性（第 1 部分）](/2021/08/03/reading-printer-properties-part-1)
 * [2021-08-05 读取打印机属性（第 2 部分）](/2021/08/05/reading-printer-properties-part-2)
 * [2021-08-09 读取打印机属性（第 3 部分）](/2021/08/09/reading-printer-properties-part-3)
+* [2021-08-11 列出网络驱动器](/2021/08/11/listing-network-drives-2)
+* [2021-08-13 移除网络驱动器](/2021/08/13/removing-network-drives)
+* [2021-08-17 处理控制台命令的错误](/2021/08/17/error-handling-for-console-commands)
