(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1921,3 +1921,6 @@ tags:
 * [2021-08-11 列出网络驱动器](/2021/08/11/listing-network-drives-2)
 * [2021-08-13 移除网络驱动器](/2021/08/13/removing-network-drives)
 * [2021-08-17 处理控制台命令的错误](/2021/08/17/error-handling-for-console-commands)
+* [2021-08-19 显示警告对话框（第 1 部分）](/2021/08/19/displaying-warning-dialog-part-1)
+* [2021-08-23 显示警告对话框（第 2 部分）](/2021/08/23/displaying-warning-dialog-part-2)
+* [2021-08-25 发现公共 IP 地址](/2021/08/25/discovering-public-ip-address)
