--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1930,3 +1930,9 @@ tags:
 * [2021-08-19 显示警告对话框（第 1 部分）](/2021/08/19/displaying-warning-dialog-part-1)
 * [2021-08-23 显示警告对话框（第 2 部分）](/2021/08/23/displaying-warning-dialog-part-2)
 * [2021-08-25 发现公共 IP 地址](/2021/08/25/discovering-public-ip-address)
+* [2021-08-27 使用 FTP：列出文件夹（第 1 部分）](/2021/08/27/using-ftp-listing-folders-part-1)
+* [2021-08-31 使用 FTP：下载文件（第 2 部分）](/2021/08/31/using-ftp-downloading-file-part-2)
+
+2021 年 09 月
+-------------
+* [2021-09-02 使用 FTP：下载二进制文件（第 3 部分）](/2021/09/02/using-ftp-downloading-binary-file-part-3)
