(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1936,3 +1936,5 @@ tags:
 2021 年 09 月
 -------------
 * [2021-09-02 使用 FTP：下载二进制文件（第 3 部分）](/2021/09/02/using-ftp-downloading-binary-file-part-3)
+* [2021-09-06 使用 FTP：上传文件（第 4 部分）](/2021/09/06/using-ftp-uploading-file-part-4)
+* [2021-09-08 从网站读取 HTTP 消息头](/2021/09/08/reading-http-headers-from-websites)
