(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1938,3 +1938,9 @@ tags:
 * [2021-09-02 使用 FTP：下载二进制文件（第 3 部分）](/2021/09/02/using-ftp-downloading-binary-file-part-3)
 * [2021-09-06 使用 FTP：上传文件（第 4 部分）](/2021/09/06/using-ftp-uploading-file-part-4)
 * [2021-09-08 从网站读取 HTTP 消息头](/2021/09/08/reading-http-headers-from-websites)
+* [2021-09-10 Creating Dummy Test Files](/2021/09/10/creating-dummy-test-files)
+* [2021-09-14 简单的内置密码生成器](/2021/09/14/simple-built-in-password-generator)
+* [2021-09-16 识别连上的 Domain](/2021/09/16/identifying-connected-domain)
+* [2021-09-20 识别本地管理员帐户](/2021/09/20/identifying-local-administrator-account)
+* [2021-09-22 识别本地管理员组](/2021/09/22/identifying-local-administrators-group)
+* [2021-09-24 重命名本地管理员账户](/2021/09/24/renaming-local-administrator-account)
