(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1958,3 +1958,8 @@ tags:
 * [2021-10-20 调整脚本性能](/2021/10/20/tuning-script-performance)
 * [2021-10-22 Working with Get-WinEvent](/2021/10/22/working-with-get-winevent)
 * [2021-10-26 读取文本文件（快速）](/2021/10/26/loading-text-files-fast)
+* [2021-10-28 速度很重要](/2021/10/28/when-speed-matters)
+
+2021 年 11 月
+-------------
+* [2021-11-01 高级排序（第 1 部分）](/2021/11/01/advanced-sorting-part-1)
