(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1963,3 +1963,4 @@ tags:
 2021 年 11 月
 -------------
 * [2021-11-01 高级排序（第 1 部分）](/2021/11/01/advanced-sorting-part-1)
+* [2021-11-03 高级排序（第 2 部分）](/2021/11/03/advanced-sorting-part-2)
