--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1964,3 +1964,5 @@ tags:
 -------------
 * [2021-11-01 高级排序（第 1 部分）](/2021/11/01/advanced-sorting-part-1)
 * [2021-11-03 高级排序（第 2 部分）](/2021/11/03/advanced-sorting-part-2)
+* [2021-11-05 高级排序（第 3 部分）](/2021/11/05/advanced-sorting-part-3)
+* [2021-11-09 高级排序（第 4 部分）](/2021/11/09/advanced-sorting-part-4)
