--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1966,3 +1966,4 @@ tags:
 * [2021-11-03 高级排序（第 2 部分）](/2021/11/03/advanced-sorting-part-2)
 * [2021-11-05 高级排序（第 3 部分）](/2021/11/05/advanced-sorting-part-3)
 * [2021-11-09 高级排序（第 4 部分）](/2021/11/09/advanced-sorting-part-4)
+* [2021-11-11 打开 Windows 设置对话框（快速）（第 1 部分）](/2021/11/11/opening-windows-settings-dialogs-fast)
