(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1970,3 +1970,5 @@ tags:
 * [2021-11-15 打开 Windows 设置对话框（快速）（第 2 部分）](/2021/11/15/opening-windows-settings-dialogs-fast-part-2)
 * [2021-11-17 改进 PowerShell ISE 的帮助](/2021/11/17/better-help-in-powershell-ise)
 * [2021-11-19 四个 PowerShell 关键先决条件](/2021/11/19/four-powershell-critical-prerequisites)
+* [2021-11-23 启用 Active Directory cmdlet](/2021/11/23/enabling-active-directory-cmdlets)
+* [2021-11-25 通过 PowerShell 调用 COVID 服务](/2021/11/25/covid-webservice-with-powershell)
