--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1972,3 +1972,10 @@ tags:
 * [2021-11-19 四个 PowerShell 关键先决条件](/2021/11/19/four-powershell-critical-prerequisites)
 * [2021-11-23 启用 Active Directory cmdlet](/2021/11/23/enabling-active-directory-cmdlets)
 * [2021-11-25 通过 PowerShell 调用 COVID 服务](/2021/11/25/covid-webservice-with-powershell)
+* [2021-11-29 使用 SOAP Webservice](/2021/11/29/using-soap-webservices)
+
+2021 年 12 月
+-------------
+* [2021-12-01 禁用摄像头](/2021/12/01/disabling-webcams)
+* [2021-12-03 检测挂起的重启](/2021/12/03/check-for-pending-reboot)
+* [2021-12-07 修复 PowerShellGet 和 Publish-Module](/2021/12/07/repair-powershellget-and-publish-module)
