(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1979,3 +1979,19 @@ tags:
 * [2021-12-01 禁用摄像头](/2021/12/01/disabling-webcams)
 * [2021-12-03 检测挂起的重启](/2021/12/03/check-for-pending-reboot)
 * [2021-12-07 修复 PowerShellGet 和 Publish-Module](/2021/12/07/repair-powershellget-and-publish-module)
+* [2021-12-27 Out-GridView 自定义列](/2021/12/27/out-gridview-with-custom-columns)
+* [2021-12-29 自动化下载联想驱动程序（第 1 部分）](/2021/12/29/automating-lenovo-driver-downloads-part-1)
+* [2021-12-31  自动化下载联想驱动程序（第 2 部分）](/2021/12/31/automating-lenovo-driver-downloads-part-2)
+
+2022 年
+=======
+
+2022 年 01 月
+-------------
+* [2022-01-04 Windows 重启后自动登录](/2022/01/04/auto-logon-after-windows-reboot)
+* [2022-01-06 动态生成 IntelliSense.](/2022/01/06/dynamically-composed-intellisense)
+* [2022-01-10 转义 URL 字符串](/2022/01/10/escaping-strings-in-urls)
+* [2022-01-12 安全地转义数据字符串](/2022/01/12/safely-escaping-data-strings)
+* [2022-01-14 转义独立的字符](/2022/01/14/escaping-individual-characters)
+* [2022-01-18 决定您的平台](/2022/01/18/determining-your-platform)
+* [2022-01-20 是否在 Windows PowerShell 中运行（第 1 部分）](/2022/01/20/running-on-windows-powershell-or-not-part-1)
