--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1995,3 +1995,13 @@ tags:
 * [2022-01-14 转义独立的字符](/2022/01/14/escaping-individual-characters)
 * [2022-01-18 决定您的平台](/2022/01/18/determining-your-platform)
 * [2022-01-20 是否在 Windows PowerShell 中运行（第 1 部分）](/2022/01/20/running-on-windows-powershell-or-not-part-1)
+* [2022-01-24 是否在 Windows PowerShell 中运行（第 2 部分）](/2022/01/24/running-on-windows-powershell-or-not-part-2)
+* [2022-01-26 测试 URL 是否完整](/2022/01/26/testing-well-formed-urls)
+* [2022-01-28 识别主 PowerShell 模块位置](/2022/01/28/identifying-primary-powershell-module-location)
+
+2022 年 02 月
+-------------
+* [2022-02-01 查看所有模块的细节](/2022/02/01/view-all-module-details)
+* [2022-02-03 打开关闭 Windows 的对话框](/2022/02/03/10-open-windows-shutdown-dialog)
+* [2022-02-07 通过 PowerShell 创建日历电子表格](/2022/02/07/creating-calendar-spreadsheets-with-powershell)
+* [2022-02-09 计算第几周（第 1 部分）](/2022/02/09/calculate-calendar-week-part-1)
