(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -2005,3 +2005,7 @@ tags:
 * [2022-02-03 打开关闭 Windows 的对话框](/2022/02/03/10-open-windows-shutdown-dialog)
 * [2022-02-07 通过 PowerShell 创建日历电子表格](/2022/02/07/creating-calendar-spreadsheets-with-powershell)
 * [2022-02-09 计算第几周（第 1 部分）](/2022/02/09/calculate-calendar-week-part-1)
+* [2022-02-11 计算第几周（第 2 部分）](/2022/02/11/calculate-calendar-week-part-2)
+* [2022-02-15 本地化日期和时间标签（第 1 部分）](/2022/02/15/localizing-date-and-time-labels-part-1)
+* [2022-02-17 本地化日期和时间标签（第 2 部分）](/2022/02/17/localizing-date-and-time-labels-part-2)
+* [2022-02-21 奇怪的 Cmdlet：New-TemporaryFile](/2022/02/21/strange-cmdlet-new-temporaryfile)
