(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -2009,3 +2009,9 @@ tags:
 * [2022-02-15 本地化日期和时间标签（第 1 部分）](/2022/02/15/localizing-date-and-time-labels-part-1)
 * [2022-02-17 本地化日期和时间标签（第 2 部分）](/2022/02/17/localizing-date-and-time-labels-part-2)
 * [2022-02-21 奇怪的 Cmdlet：New-TemporaryFile](/2022/02/21/strange-cmdlet-new-temporaryfile)
+* [2022-02-23 检测计划外的关机](/2022/02/23/detecting-unplanned-shutdown)
+* [2022-02-25 检测电源状态](/2022/02/25/detecting-power-status)
+
+2022 年 03 月
+-------------
+* [2022-03-01 通过 PowerShell 休眠或待机](/2022/03/01/hibernate-or-standby-via-powershell)
