--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -2015,3 +2015,9 @@ tags:
 2022 年 03 月
 -------------
 * [2022-03-01 通过 PowerShell 休眠或待机](/2022/03/01/hibernate-or-standby-via-powershell)
+* [2022-03-03 自定义基于控制台的对话框](/2022/03/03/custom-console-based-dialog)
+* [2022-03-07 在 Windows 中用 PowerShell 来管理文件共享（第 1 部分）](/2022/03/07/managing-file-shares-on-windows-with-powershell-part-1)
+* [2022-03-09 在 Windows 中用 PowerShell 来管理文件共享（第 2 部分）](/2022/03/09/managing-file-shares-on-windows-with-powershell-part-2)
+* [2022-03-11 为文件夹快速打开 PowerShell](/2022/03/11/quickly-open-powershell-for-folder)
+* [2022-03-15 管理 Bitlocker](/2022/03/15/managing-bitlocker)
+* [2022-03-17 复位防火墙策略](/2022/03/17/resetting-firewall-policy)
