--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -2021,3 +2021,5 @@ tags:
 * [2022-03-11 为文件夹快速打开 PowerShell](/2022/03/11/quickly-open-powershell-for-folder)
 * [2022-03-15 管理 Bitlocker](/2022/03/15/managing-bitlocker)
 * [2022-03-17 复位防火墙策略](/2022/03/17/resetting-firewall-policy)
+* [2022-03-21 Defender: 清空威胁列表和相关设置](/2022/03/21/defender-purge-threat-list-and-related-settings)
+* [2022-03-23 从 Internet 下载文件](/2022/03/23/downloading-files-from-internet-2)
