(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -2023,3 +2023,4 @@ tags:
 * [2022-03-17 复位防火墙策略](/2022/03/17/resetting-firewall-policy)
 * [2022-03-21 Defender: 清空威胁列表和相关设置](/2022/03/21/defender-purge-threat-list-and-related-settings)
 * [2022-03-23 从 Internet 下载文件](/2022/03/23/downloading-files-from-internet-2)
+* [2022-03-25 在 PowerShell 使用高效的列表](/2022/03/25/using-efficient-lists-in-powershell)
