(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1944,14 +1944,14 @@ tags:
 * [2021-09-20 识别本地管理员帐户](/2021/09/20/identifying-local-administrator-account)
 * [2021-09-22 识别本地管理员组](/2021/09/22/identifying-local-administrators-group)
 * [2021-09-24 重命名本地管理员账户](/2021/09/24/renaming-local-administrator-account)
-* [2021-09-28 Disabling Local “Guest” Account](/2021/09/28/disabling-local-guest-account)
-* [2021-09-30 Taking Screenshot](/2021/09/30/taking-screenshot)
+* [2021-09-28 禁用本地的 Guest 账户](/2021/09/28/disabling-local-guest-account)
+* [2021-09-30 截屏](/2021/09/30/taking-screenshot)
 
 2021 年 10 月
 -------------
-* [2021-10-04 Turning Text into Individual Lines (Part 1)](/2021/10/04/turning-text-into-individual-lines-part-1)
-* [2021-10-06 Turning Text into Individual Lines (Part 2)](/2021/10/06/turning-text-into-individual-lines-part-2)
-* [2021-10-08 Turning Text into Individual Lines (Part 3)](/2021/10/08/turning-text-into-individual-lines-part-3)
+* [2021-10-04 分割文本行（第 1 部分）](/2021/10/04/turning-text-into-individual-lines-part-1)
+* [2021-10-06 分割文本行（第 2 部分）](/2021/10/06/turning-text-into-individual-lines-part-2)
+* [2021-10-08 分割文本行（第 3 部分）](/2021/10/08/turning-text-into-individual-lines-part-3)
 * [2021-10-12 创建动态参数](/2021/10/12/creating-dynamic-parameters)
 * [2021-10-14 将 UNIX 时间转为 DateTime](/2021/10/14/converting-unix-time-to-datetime)
 * [2021-10-18 将 Ticks 转换为 DateTime](/2021/10/18/converting-ticks-to-datetime)
