(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -2024,3 +2024,22 @@ tags:
 * [2022-03-21 Defender: 清空威胁列表和相关设置](/2022/03/21/defender-purge-threat-list-and-related-settings)
 * [2022-03-23 从 Internet 下载文件](/2022/03/23/downloading-files-from-internet-2)
 * [2022-03-25 在 PowerShell 使用高效的列表](/2022/03/25/using-efficient-lists-in-powershell)
+* [2022-03-29 Update PowerShell’s PSReadLine](/2022/03/29/update-powershell-s-psreadline)
+* [2022-03-31 Using Dynamic Help in PowerShell Console](/2022/03/31/using-dynamic-help-in-powershell-console)
+
+2022 年 04 月
+-------------
+* [2022-04-04 Using Predictive IntelliSense](/2022/04/04/using-predictive-intellisense)
+* [2022-04-06 Automating User Confirmation](/2022/04/06/automating-user-confirmation)
+* [2022-04-08 Managing Wi-Fi Profiles](/2022/04/08/managing-wi-fi-profiles)
+* [2022-04-12 More Control with Strict Mode](/2022/04/12/more-control-with-strict-mode)
+* [2022-04-14 利用 WMI（第 1 部分）](/2022/04/14/leveraging-wmi-part-1)
+* [2022-04-18 利用 WMI（第 2 部分）](/2022/04/18/leveraging-wmi-part-2)
+* [2022-04-20 利用 WMI（第 3 部分）](/2022/04/20/leveraging-wmi-part-3)
+* [2022-04-22 利用 WMI（第 4 部分）](/2022/04/22/leveraging-wmi-part-4)
+* [2022-04-26 利用 WMI（第 5 部分）](/2022/04/26/leveraging-wmi-part-5)
+* [2022-04-28 2022 年的 PowerShell 计划](/2022/04/28/powershell-plans-for-2022)
+
+2022 年 05 月
+-------------
+* [2022-05-02 管理蓝牙设备（第 1 部分）](/2022/05/02/managing-bluetooth-devices-part-1)
