(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -2043,3 +2043,6 @@ tags:
 2022 年 05 月
 -------------
 * [2022-05-02 管理蓝牙设备（第 1 部分）](/2022/05/02/managing-bluetooth-devices-part-1)
+* [2022-05-04 管理蓝牙设备（第 2 部分）](/2022/05/04/managing-bluetooth-devices-part-2)
+* [2022-05-06 管理蓝牙设备（第 2 部分）](/2022/05/06/managing-bluetooth-devices-part-3)
+* [2022-05-10 清除硬盘（第 1 部分）](/2022/05/10/cleaning-hard-drive-part-1)
