(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -2045,4 +2045,8 @@ tags:
 * [2022-05-02 管理蓝牙设备（第 1 部分）](/2022/05/02/managing-bluetooth-devices-part-1)
 * [2022-05-04 管理蓝牙设备（第 2 部分）](/2022/05/04/managing-bluetooth-devices-part-2)
 * [2022-05-06 管理蓝牙设备（第 2 部分）](/2022/05/06/managing-bluetooth-devices-part-3)
-* [2022-05-10 清除硬盘（第 1 部分）](/2022/05/10/cleaning-hard-drive-part-1)
+* [2022-05-10 清理硬盘（第 1 部分）](/2022/05/10/cleaning-hard-drive-part-1)
+* [2022-05-12 清理硬盘（第 2 部分）](/2022/05/12/cleaning-hard-drive-part-2)
+* [2022-05-16 专业地处理错误](/2022/05/16/professional-error-handling)
+* [2022-05-18 签名 PowerShell 脚本（第 1 部分）](/2022/05/18/code-signing-powershell-scripts-part-1)
+* [2022-05-20 签名 PowerShell 脚本（第 2 部分）](/2022/05/20/code-signing-powershell-scripts-part-2)
