(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -2050,3 +2050,16 @@ tags:
 * [2022-05-16 专业地处理错误](/2022/05/16/professional-error-handling)
 * [2022-05-18 签名 PowerShell 脚本（第 1 部分）](/2022/05/18/code-signing-powershell-scripts-part-1)
 * [2022-05-20 签名 PowerShell 脚本（第 2 部分）](/2022/05/20/code-signing-powershell-scripts-part-2)
+* [2022-05-24 签名 PowerShell 脚本（第 3 部分）](/2022/05/24/code-signing-powershell-scripts-part-3)
+* [2022-05-26 为 PowerShell 创建 sudo（第 1 部分）](/2022/05/26/creating-sudo-for-powershell-part-1)
+* [2022-05-30 为 PowerShell 创建 sudo（第 2 部分）](/2022/05/30/creating-sudo-for-powershell-part-2)
+
+2022 年 06 月
+-------------
+* [2022-06-01 读取 Windows 10 产品序列号](/2022/06/01/reading-windows-10-product-key)
+* [2022-06-03 简单的类似 grep 的文本过滤器（第 1 部分）](/2022/06/03/simple-text-based-filtering-a-la-grep-part-1)
+* [2022-06-07 解析 URL](/2022/06/07/resolving-urls-3)
+* [2022-06-09 值得一读：PowerShell 语言规范](/2022/06/09/worth-a-read-powershell-language-definition)
+* [2022-06-13 检测多语言在线文档（第 1 部分）](/2022/06/13/identifying-multi-language-online-documents-part-1)
+* [2022-06-15 检测多语言在线文档（第 2 部分）](/2022/06/15/identifying-multi-language-online-documents-part-2)
+* [2022-06-17 请注意数组](/2022/06/17/careful-with-arrays)
