(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -2063,3 +2063,12 @@ tags:
 * [2022-06-13 检测多语言在线文档（第 1 部分）](/2022/06/13/identifying-multi-language-online-documents-part-1)
 * [2022-06-15 检测多语言在线文档（第 2 部分）](/2022/06/15/identifying-multi-language-online-documents-part-2)
 * [2022-06-17 请注意数组](/2022/06/17/careful-with-arrays)
+* [2022-06-21 PowerShell 扩展的重要更新](/2022/06/21/major-update-for-powershell-extensions)
+* [2022-06-23 解锁多个文件](/2022/06/23/unblocking-multiple-files)
+* [2022-06-27 快速查找过期的 PowerShell 模块](/2022/06/27/quickly-finding-outdated-powershell-modules)
+* [2022-06-29 清理 PowerShell 模块（第 1 部分）](/2022/06/29/cleaning-up-powershell-modules-part-1)
+
+2022 年 07 月
+-------------
+* [2022-07-01 清理 PowerShell 模块（第 2 部分）](/2022/07/01/cleaning-up-powershell-modules-part-2)
+* [2022-07-05 清理 PowerShell 模块（第 3 部分）](/2022/07/05/cleaning-up-powershell-modules-part-3)
